# CS2022301-ROBDD-Generation

./: .gitignore  CMakeLists.txt  README.md
docs/report/: report.docx  report.md
examples/case10/: input.pla
examples/case7/: input.pla
examples/case8/: input.pla
examples/case9/: input.pla
include/: BDDManager.hpp  BDDNode.hpp  PLAParser.hpp
src/: B11030202.cpp  BDDManager.cpp  PLAParser.cpp  main.cpp
